# ShorakaInterview

./: .flake8  .gitignore  .pre-commit-config.yaml  SCALABILITY.md  env.example  pyproject.toml
app/: main.py
app/api/: endpoints.py
app/core/: setting.py
app/db/: session.py
app/db/models/: __init__.py  short_url.py  view_log.py
app/exceptions/: short_url.py
app/middleware/: __init__.py  logging.py
app/repositories/: short_url.py  view_log.py
app/schemas/: short_url.py  view_log.py
app/services/: short_url.py  view_log.py
app/utils/: pool_monitor.py  shortener.py  url.py
migrations/: env.py
migrations/versions/: 47a8cb3e7838_create_url_view_log_model.py  86ee448f32d2_make_created_at_aware_in_shorturl.py  9350326c41d8_make_created_at_aware_in_shorturl.py  9bcfec6163bc_add_urlviewlog_table.py  a1a1e13b7b9b_add_shorturl.py
